Antlr/Tiger/TigerParser.java
// Generated from Tiger.g4 by ANTLR 4.0
package Antlr.Tiger;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TigerParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, STRING=2, ASSIGN=3, COMMA=4, SEMI=5, COLON=6, DOT=7, LT=8, 
		LE=9, GT=10, GE=11, EQ=12, NEQ=13, AND=14, OR=15, PLUS=16, MINUS=17, MUL=18, 
		DIV=19, LPAR=20, RPAR=21, LSQR=22, RSQR=23, LBCE=24, RBCE=25, NIL=26, 
		NEW=27, IF=28, THEN=29, ELSE=30, WHILE=31, DO=32, FOR=33, TO=34, BREAK=35, 
		LET=36, IN=37, END=38, CLASS=39, EXTENDS=40, VAR=41, TYPE=42, METHOD=43, 
		FUNCTION=44, ARRAY=45, OF=46, PRIMITIVE=47, IMPORT=48, ID=49, INT=50, 
		WHITESPACE=51;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "STRING", "':='", "','", "';'", "':'", "'.'", 
		"'<'", "'<='", "'>'", "'>='", "'='", "'<>'", "'&'", "'|'", "'+'", "'-'", 
		"'*'", "'/'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'nil'", "'new'", 
		"'if'", "'then'", "'else'", "'while'", "'do'", "'for'", "'to'", "'break'", 
		"'let'", "'in'", "'end'", "'class'", "'extends'", "'var'", "'type'", "'method'", 
		"'function'", "'array'", "'of'", "'primitive'", "'import'", "ID", "INT", 
		"WHITESPACE"
	};
	public static final int
		RULE_program = 0, RULE_exprList = 1, RULE_exprs = 2, RULE_expr = 3, RULE_arrayInitializer = 4, 
		RULE_recordInitializer = 5, RULE_initFields = 6, RULE_initField = 7, RULE_negateExpr = 8, 
		RULE_newExpr = 9, RULE_sequenceExpr = 10, RULE_assignExpr = 11, RULE_valueExpr = 12, 
		RULE_funcExpr = 13, RULE_methodExpr = 14, RULE_ifExpr = 15, RULE_whileExpr = 16, 
		RULE_forExpr = 17, RULE_forID = 18, RULE_breakExpr = 19, RULE_letExpr = 20, 
		RULE_lvalue = 21, RULE_decs = 22, RULE_dec = 23, RULE_varDec = 24, RULE_typeDec = 25, 
		RULE_classDec = 26, RULE_funcDec = 27, RULE_primitiveDec = 28, RULE_importDec = 29, 
		RULE_type = 30, RULE_arrayType = 31, RULE_recordType = 32, RULE_typeFields = 33, 
		RULE_typeField = 34, RULE_typeID = 35, RULE_classFields = 36, RULE_classField = 37, 
		RULE_methodDec = 38;
	public static final String[] ruleNames = {
		"program", "exprList", "exprs", "expr", "arrayInitializer", "recordInitializer", 
		"initFields", "initField", "negateExpr", "newExpr", "sequenceExpr", "assignExpr", 
		"valueExpr", "funcExpr", "methodExpr", "ifExpr", "whileExpr", "forExpr", 
		"forID", "breakExpr", "letExpr", "lvalue", "decs", "dec", "varDec", "typeDec", 
		"classDec", "funcDec", "primitiveDec", "importDec", "type", "arrayType", 
		"recordType", "typeFields", "typeField", "typeID", "classFields", "classField", 
		"methodDec"
	};

	@Override
	public String getGrammarFileName() { return "Tiger.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public TigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public DecsContext decs() {
			return getRuleContext(DecsContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(80);
			switch (_input.LA(1)) {
			case STRING:
			case MINUS:
			case LPAR:
			case NIL:
			case NEW:
			case IF:
			case WHILE:
			case FOR:
			case BREAK:
			case LET:
			case ID:
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); expr(0);
				}
				break;
			case EOF:
			case CLASS:
			case VAR:
			case TYPE:
			case FUNCTION:
			case PRIMITIVE:
			case IMPORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(79); decs();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public TerminalNode COMMA(int i) {
			return getToken(TigerParser.COMMA, i);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TigerParser.COMMA); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterExprList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitExprList(this);
		}
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << MINUS) | (1L << LPAR) | (1L << NIL) | (1L << NEW) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << BREAK) | (1L << LET) | (1L << ID) | (1L << INT))) != 0)) {
				{
				setState(82); expr(0);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(83); match(COMMA);
					setState(84); expr(0);
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprsContext extends ParserRuleContext {
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(TigerParser.SEMI); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode SEMI(int i) {
			return getToken(TigerParser.SEMI, i);
		}
		public ExprsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterExprs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitExprs(this);
		}
	}

	public final ExprsContext exprs() throws RecognitionException {
		ExprsContext _localctx = new ExprsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exprs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << MINUS) | (1L << LPAR) | (1L << NIL) | (1L << NEW) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << BREAK) | (1L << LET) | (1L << ID) | (1L << INT))) != 0)) {
				{
				setState(92); expr(0);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(93); match(SEMI);
					setState(94); expr(0);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public int _p;
		public TerminalNode GE() { return getToken(TigerParser.GE, 0); }
		public TerminalNode LT() { return getToken(TigerParser.LT, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public FuncExprContext funcExpr() {
			return getRuleContext(FuncExprContext.class,0);
		}
		public AssignExprContext assignExpr() {
			return getRuleContext(AssignExprContext.class,0);
		}
		public SequenceExprContext sequenceExpr() {
			return getRuleContext(SequenceExprContext.class,0);
		}
		public BreakExprContext breakExpr() {
			return getRuleContext(BreakExprContext.class,0);
		}
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public TerminalNode INT() { return getToken(TigerParser.INT, 0); }
		public LetExprContext letExpr() {
			return getRuleContext(LetExprContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(TigerParser.MINUS, 0); }
		public TerminalNode AND() { return getToken(TigerParser.AND, 0); }
		public NegateExprContext negateExpr() {
			return getRuleContext(NegateExprContext.class,0);
		}
		public TerminalNode MUL() { return getToken(TigerParser.MUL, 0); }
		public ValueExprContext valueExpr() {
			return getRuleContext(ValueExprContext.class,0);
		}
		public TerminalNode NEQ() { return getToken(TigerParser.NEQ, 0); }
		public WhileExprContext whileExpr() {
			return getRuleContext(WhileExprContext.class,0);
		}
		public NewExprContext newExpr() {
			return getRuleContext(NewExprContext.class,0);
		}
		public TerminalNode NIL() { return getToken(TigerParser.NIL, 0); }
		public TerminalNode OR() { return getToken(TigerParser.OR, 0); }
		public TerminalNode GT() { return getToken(TigerParser.GT, 0); }
		public TerminalNode PLUS() { return getToken(TigerParser.PLUS, 0); }
		public ArrayInitializerContext arrayInitializer() {
			return getRuleContext(ArrayInitializerContext.class,0);
		}
		public RecordInitializerContext recordInitializer() {
			return getRuleContext(RecordInitializerContext.class,0);
		}
		public TerminalNode DIV() { return getToken(TigerParser.DIV, 0); }
		public TerminalNode EQ() { return getToken(TigerParser.EQ, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MethodExprContext methodExpr() {
			return getRuleContext(MethodExprContext.class,0);
		}
		public TerminalNode LE() { return getToken(TigerParser.LE, 0); }
		public ForExprContext forExpr() {
			return getRuleContext(ForExprContext.class,0);
		}
		public TerminalNode STRING() { return getToken(TigerParser.STRING, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState, _p);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, RULE_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(103); negateExpr();
				}
				break;

			case 2:
				{
				setState(104); match(NIL);
				}
				break;

			case 3:
				{
				setState(105); match(INT);
				}
				break;

			case 4:
				{
				setState(106); match(STRING);
				}
				break;

			case 5:
				{
				setState(107); arrayInitializer();
				}
				break;

			case 6:
				{
				setState(108); recordInitializer();
				}
				break;

			case 7:
				{
				setState(109); newExpr();
				}
				break;

			case 8:
				{
				setState(110); sequenceExpr();
				}
				break;

			case 9:
				{
				setState(111); assignExpr();
				}
				break;

			case 10:
				{
				setState(112); valueExpr();
				}
				break;

			case 11:
				{
				setState(113); funcExpr();
				}
				break;

			case 12:
				{
				setState(114); methodExpr();
				}
				break;

			case 13:
				{
				setState(115); ifExpr();
				}
				break;

			case 14:
				{
				setState(116); whileExpr();
				}
				break;

			case 15:
				{
				setState(117); forExpr();
				}
				break;

			case 16:
				{
				setState(118); breakExpr();
				}
				break;

			case 17:
				{
				setState(119); letExpr();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(137);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(122);
						if (!(21 >= _localctx._p)) throw new FailedPredicateException(this, "21 >= $_p");
						setState(123);
						_la = _input.LA(1);
						if ( !(_la==MUL || _la==DIV) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(124); expr(22);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(125);
						if (!(20 >= _localctx._p)) throw new FailedPredicateException(this, "20 >= $_p");
						setState(126);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(127); expr(21);
						}
						break;

					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(128);
						if (!(19 >= _localctx._p)) throw new FailedPredicateException(this, "19 >= $_p");
						setState(129);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << LE) | (1L << GT) | (1L << GE) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(130); expr(20);
						}
						break;

					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(131);
						if (!(18 >= _localctx._p)) throw new FailedPredicateException(this, "18 >= $_p");
						setState(132); match(AND);
						setState(133); expr(19);
						}
						break;

					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(134);
						if (!(17 >= _localctx._p)) throw new FailedPredicateException(this, "17 >= $_p");
						setState(135); match(OR);
						setState(136); expr(18);
						}
						break;
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArrayInitializerContext extends ParserRuleContext {
		public TerminalNode LSQR() { return getToken(TigerParser.LSQR, 0); }
		public TerminalNode RSQR() { return getToken(TigerParser.RSQR, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OF() { return getToken(TigerParser.OF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TypeIDContext typeID() {
			return getRuleContext(TypeIDContext.class,0);
		}
		public ArrayInitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayInitializer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterArrayInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitArrayInitializer(this);
		}
	}

	public final ArrayInitializerContext arrayInitializer() throws RecognitionException {
		ArrayInitializerContext _localctx = new ArrayInitializerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arrayInitializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); typeID();
			setState(143); match(LSQR);
			setState(144); expr(0);
			setState(145); match(RSQR);
			setState(146); match(OF);
			setState(147); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordInitializerContext extends ParserRuleContext {
		public TerminalNode RBCE() { return getToken(TigerParser.RBCE, 0); }
		public TerminalNode LBCE() { return getToken(TigerParser.LBCE, 0); }
		public InitFieldsContext initFields() {
			return getRuleContext(InitFieldsContext.class,0);
		}
		public TypeIDContext typeID() {
			return getRuleContext(TypeIDContext.class,0);
		}
		public RecordInitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordInitializer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterRecordInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitRecordInitializer(this);
		}
	}

	public final RecordInitializerContext recordInitializer() throws RecognitionException {
		RecordInitializerContext _localctx = new RecordInitializerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_recordInitializer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); typeID();
			setState(150); match(LBCE);
			setState(151); initFields();
			setState(152); match(RBCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitFieldsContext extends ParserRuleContext {
		public TerminalNode COMMA(int i) {
			return getToken(TigerParser.COMMA, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TigerParser.COMMA); }
		public List<InitFieldContext> initField() {
			return getRuleContexts(InitFieldContext.class);
		}
		public InitFieldContext initField(int i) {
			return getRuleContext(InitFieldContext.class,i);
		}
		public InitFieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initFields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterInitFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitInitFields(this);
		}
	}

	public final InitFieldsContext initFields() throws RecognitionException {
		InitFieldsContext _localctx = new InitFieldsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_initFields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(154); initField();
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(155); match(COMMA);
					setState(156); initField();
					}
					}
					setState(161);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitFieldContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(TigerParser.EQ, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InitFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterInitField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitInitField(this);
		}
	}

	public final InitFieldContext initField() throws RecognitionException {
		InitFieldContext _localctx = new InitFieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_initField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); match(ID);
			setState(165); match(EQ);
			setState(166); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NegateExprContext extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(TigerParser.MINUS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NegateExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negateExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterNegateExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitNegateExpr(this);
		}
	}

	public final NegateExprContext negateExpr() throws RecognitionException {
		NegateExprContext _localctx = new NegateExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_negateExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); match(MINUS);
			setState(169); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewExprContext extends ParserRuleContext {
		public TerminalNode NEW() { return getToken(TigerParser.NEW, 0); }
		public TypeIDContext typeID() {
			return getRuleContext(TypeIDContext.class,0);
		}
		public NewExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterNewExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitNewExpr(this);
		}
	}

	public final NewExprContext newExpr() throws RecognitionException {
		NewExprContext _localctx = new NewExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_newExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); match(NEW);
			setState(172); typeID();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SequenceExprContext extends ParserRuleContext {
		public TerminalNode RPAR() { return getToken(TigerParser.RPAR, 0); }
		public TerminalNode LPAR() { return getToken(TigerParser.LPAR, 0); }
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public SequenceExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequenceExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterSequenceExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitSequenceExpr(this);
		}
	}

	public final SequenceExprContext sequenceExpr() throws RecognitionException {
		SequenceExprContext _localctx = new SequenceExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sequenceExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(LPAR);
			setState(175); exprs();
			setState(176); match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignExprContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(TigerParser.ASSIGN, 0); }
		public AssignExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterAssignExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitAssignExpr(this);
		}
	}

	public final AssignExprContext assignExpr() throws RecognitionException {
		AssignExprContext _localctx = new AssignExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assignExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); lvalue();
			setState(179); match(ASSIGN);
			setState(180); expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueExprContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public ValueExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterValueExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitValueExpr(this);
		}
	}

	public final ValueExprContext valueExpr() throws RecognitionException {
